fix trip timeslot text overflow

--- a/public/styles/user.css
+++ b/public/styles/user.css
@@ -566,6 +566,7 @@ tr td,
 .trip-list ul > li span.timeslot {
   color: #f60;
   margin-left: 10px;
+  font-size: smaller;
   text-transform: initial;
 }
 
